--- a/src/app/components/form-empleado/form-empleado.component.css
+++ b/src/app/components/form-empleado/form-empleado.component.css
@@ -1,3 +1,34 @@
 .container-fluid{
-    margin-top: 100px;
+    margin-top: 30px;
+
+    align-content: center;
+}
+#formulario{
+    border-radius: 30px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 300px;
+    background-color: #6761e2ab;
+    color: white;
+    font-family: 'Montserrat', bold;
+}
+#item{
+margin-top: 15px;
+}
+input:hover{
+    background: slateblue;
+    color: aliceblue;
+}
+button{
+    margin-left: 240px;
+    text-align: center;
+    width: 150px;
+    margin-bottom: 30px;
+    background: slateblue;
+    color: aliceblue;
+}
+
+select:hover{
+    background: slateblue;
+    color: aliceblue;
 }
