--- a/src/app/components/registro-reuniones/registro-reuniones.component.html
+++ b/src/app/components/registro-reuniones/registro-reuniones.component.html
@@ -109,23 +109,23 @@
           <div class="carousel-item active">
             <div class="card">
                 <div class="card-body row m-auto">
-                    <div class="col-11 m-auto mb-3">
+                    <div class="col-11 m-auto mb-3 " id="item">
                         <label for="nombre" class="form-label">Ingrese Nombre de la Reunion:</label>
                         <input type="text" id="nombre" name="nombre" class="form-control" [(ngModel)]="reunion.nombre">
                     </div>
-                    <div class="col-11 m-auto mb-3">
+                    <div class="col-11 m-auto mb-3" id="item">
                         <label for="descripcion" class="form-label">Ingrese Descripcion de la Reunion:</label>
                         <input type="text" id="descripcion" name="descripcion" class="form-control" [(ngModel)]="reunion.descripcion">
                     </div>
-                    <div class="col-11 m-auto mb-3">
+                    <div class="col-11 m-auto mb-3" id="item">
                         <label for="fecha" class="form-label">Ingrese Fecha:</label>
                         <input type="date" id="fecha" name="fecha" class="form-control" [(ngModel)]="reunion.fecha">
                     </div>
-                    <div class="col-5 m-auto mb-3">
+                    <div class="col-5 m-auto mb-3" id="item">
                         <label for="horaInicio" class="form-label">Ingrese Hora Inicio:</label>
                         <input type="time" id="horaInicio" name="horaInicio" class="form-control" [(ngModel)]="reunion.horaReunion">
                     </div>
-                    <div class="col-5 m-auto mb-3">
+                    <div class="col-5 m-auto mb-3" id="item">
                         <label for="horaFin" class="form-label">Ingrese Hora Finalizacion: </label>
                         <input type="time" id="horaFin" name="horaFin" class="form-control" [(ngModel)]="reunion.horaFinalizacion">
                     </div>
@@ -136,7 +136,7 @@
           <div class="carousel-item">
             <div class="card">
                 <div class="card-body row m-auto">
-                    <div class="col-11 m-auto mb-3">
+                    <div class="col-11 m-auto mb-3 " id="item">
                         <label for="tipoReunion" class="form-label">Seleccione el Tipo de Reunion:</label>
                         <select name="tipoReunion" id="tipoReunion" class="form-select" [(ngModel)]="reunion.tipoReunion">
                             <option *ngFor="let tr of tiposReunion" [ngValue]="tr">{{tr.nombre}}</option>
@@ -194,19 +194,19 @@
                             (onFileChanged)="onFileChanges($event)"
                             accept="image/x-png,image/gif,image/jpeg" />
 
-                        <button type="button" class="btn btn-dark" (click)="cargarRecurso()">Cargar Recurso</button>
+                        <button type="button" id="boton" class="btn btn-dark" (click)="cargarRecurso()">Cargar Recurso</button>
                     </form>
                 </div>
-                <button type="button" (click)="registrarReunion()" class="btn btn-dark mb-3">Registrar Reunion</button>
+                <button type="button" id="botonb"(click)="registrarReunion()" class="btn btn-dark mb-3">Registrar Reunion</button>
             </div>
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon bg-dark" aria-hidden="true" style="margin-right: 75px; "></span>
             <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon bg-dark" aria-hidden="true" style="margin-left: 75px;"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
