agregado ver detalle reuniones y codigo qr

--- a/src/app/components/registro-reuniones/registro-reuniones.component.html
+++ b/src/app/components/registro-reuniones/registro-reuniones.component.html
@@ -102,7 +102,7 @@
 </div>
 -->
 
-<form action="" class="w-50 m-auto">
+<form action="" class="m-auto">
 
     <div id="carouselExampleIndicators" class="carousel" >
         <div class="carousel-inner">
