--- a/src/app/components/principal-participante/principal-participante.component.html
+++ b/src/app/components/principal-participante/principal-participante.component.html
@@ -55,7 +55,23 @@
             </div>
           </div>
         </div>
-        
+        <div class="col">
+          <div class="card">
+            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+              <img src="/assets/undraw_Calendar.png" class="img-fluid"/>
+              <a href="#!">
+                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Notificaciones</h5>
+              <p class="card-text">
+                Ver notifcaciones de reuniones proximas
+            </p>
+              <button class="btn" >Ir</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
