--- a/src/app/components/principal-admi/principal-admi.component.html
+++ b/src/app/components/principal-admi/principal-admi.component.html
@@ -26,7 +26,7 @@
       <div class="col">
         <div class="card">
           <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-            <img src="/assets/undraw_team.png" class="img-fluid"/>
+            <img src="/assets/undraw_Team.png" class="img-fluid"/>
             <a href="#!">
               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
             </a>
