--- a/src/app/components/principal-participante/principal-participante.component.css
+++ b/src/app/components/principal-participante/principal-participante.component.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   margin-top: 70px;
+  justify-content: center;
 }
 .container-fluid{
   margin: 0px;
@@ -28,6 +29,10 @@
 }
 .card img{
   height: 250px;
+}
+.d-flex{
+  justify-content: center;
+  
 }
 #container-cards{
   width:fit-content;
