--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,8 +29,10 @@
                     </div>
                 </div>
                 <div id="btns">
+                   <button class="btn btn-login"  value="LOGIN" (click)="login()">
+                    LOGIN
+                   </button>
                    
-                    <input class="btn btn-login"  value="LOGIN" (click)="login()">
                     <div class="alert-danger">{{msglogin}}</div>
                     
                 </div>
