--- a/src/app/components/form-empleado/form-empleado.component.css
+++ b/src/app/components/form-empleado/form-empleado.component.css
@@ -1,16 +1,36 @@
 .container-fluid{
-    margin-top: 30px;
-
+    padding: 10px;
+    background-image: url('/assets/fondo-header.jpg');
+    background-size:cover;
     align-content: center;
 }
 #formulario{
     border-radius: 30px;
     margin: auto;
-    margin-top: 10px;
-    margin-bottom: 300px;
-    background-color: #6761e2ab;
+    text-align: center;
+    background-color: #807aedab;
     color: white;
     font-family: 'Montserrat', bold;
+    padding: 15px;
+}
+h5{
+    font-family: 'Readex Pro', sans-serif;
+    color:#ffffffff;
+    font-size: 20px;
+    margin: 10px;
+}
+.btn-close{
+    
+    width:fit-content ;
+    height: fit-content;
+   font-size: 20px;
+   
+}
+#btn-cerrar{
+    justify-content: right;
+    margin: 0px;  
+    padding: 0px;
+    text-align: right;
 }
 #item{
 margin-top: 15px;
@@ -25,7 +45,7 @@ button{
     width: 150px;
     margin-bottom: 30px;
     background: slateblue;
-    color: aliceblue;
+    color: rgb(255, 255, 255);
 }
 
 select:hover{
