--- a/src/app/components/gestion-empleados/gestion-empleados.component.html
+++ b/src/app/components/gestion-empleados/gestion-empleados.component.html
@@ -18,7 +18,10 @@
       </div>
     </div>
 </div>
-<button class="btn btn-agregar" (click)="altaEmpleado()">AGREGAR <i class="fa-solid fa-circle-plus"></i></button>
+<div class="btns">
+  <button class="btn btn-agregar" (click)="altaEmpleado()">AGREGAR <i class="fa-solid fa-circle-plus"></i></button>
+</div>
+
 <div class="card m-auto w-75">
     
     <table class="table">
