--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,12 +29,8 @@
                     -->
                 </div>
                 <div id="btns">
-                   <button class="btn btn-login"  value="LOGIN" (click)="login()">
-                    LOGIN
-                   </button>
-                   
-                    <input class="btn btn-login"  value="LOGIN" (click)="login()" [disabled]="form.invalid">
-                    <div class="alert-danger">{{msglogin}}</div>
+                   <button class="btn btn-login btn-lg" value="LOGIN" (click)="login()" [disabled]="form.invalid">LOGIN</button>
+                   <div class="alert-danger">{{msglogin}}</div>
                 </div>
             </form>
         </div>
