--- a/src/app/components/form-empleado/form-empleado.component.html
+++ b/src/app/components/form-empleado/form-empleado.component.html
@@ -1,12 +1,9 @@
 <div class="container-fluid">
-    
     <form #form="ngForm" class="card w-50 m-auto row mb-5" action="" id="formulario">
         <div id="btn-cerrar">
             <button (click)="cerrar()" type="submit" class="btn-close"><i class="fa-solid fa-xmark"></i></button>
         </div>
-        
         <h5 class="mt-4 ">Formulario Empleados</h5>
-        
         <div class="row mb-2 " id="item">
             <div class="col-6 ">
                 <label for="nombre" class="form-label">Nombre: </label>
@@ -66,8 +63,8 @@
                 </select>
             </div>
         </div>
-        <button type="button" class="btn" (click)="altaEmpleado()"  *ngIf="accion=='new'"  [disabled]="form.invalid">Registrar</button>
-        <button *ngIf="accion=='update'" (click)="actualizarEmpleado()" type="submit" class="btn btn-modificar">ACTUALIZAR</button>
+        <button type="button" class="btn" (click)="altaEmpleado()" *ngIf="accion=='new'" [disabled]="form.invalid" routerLink="principal/Administrador/gestionEmpleados">Registrar</button>
+        <button *ngIf="accion=='update'" (click)="actualizarEmpleado()" type="submit" class="btn btn-modificar" [disabled]="form.invalid" routerLink="/principal/Administrador/gestionEmpleados">ACTUALIZAR</button>
         <button type="button" class="btn" (click)="resetForm(form)">Limpiar</button>
     </form>
 </div>
