--- a/src/app/components/principal-admi/principal-admi.component.html
+++ b/src/app/components/principal-admi/principal-admi.component.html
@@ -1,27 +1,22 @@
 
 <div class="row container-fluid">
   <div id="inicio">
-    <!-- Background image -->
     <div  class="text-center">
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
           <h1 class="mb-3"><i class="fa-brands fa-guilded"></i> <br> Inicio Administrador</h1>
-          <!-- Breadcrumb -->
           <nav class="d-flex">
             <h6 class="mb-0">
-              <a href="" class="text-reset">Home</a>
+              <a routerLink="/principal/Administrador" class="text-reset">Home</a>
               <span>/</span>
             </h6>
           </nav>
-          <!-- Breadcrumb -->
         </div>
-      </div>
-                         
+      </div>                   
     </div>
     <div id="flecha">
       <i class="fa-solid fa-angle-down"></i>
-    </div>
-                      
+    </div>         
     <div id="container-cards" class=" d-flex align-items-start justify-content-center" >
       <div class="col">
         <div class="card">
