--- a/src/app/components/principal-participante/principal-participante.component.html
+++ b/src/app/components/principal-participante/principal-participante.component.html
@@ -8,7 +8,7 @@
             <!-- Breadcrumb -->
             <nav class="d-flex">
               <h6 class="mb-0">
-                <a href="" class="text-reset">Home</a>
+                <a routerLink="/principal/Participante" class="text-reset">Home</a>
                 <span>/</span>
               </h6>
             </nav>
