Corrigiendo detalles (css)

--- a/src/app/components/principal-admi/principal-admi.component.html
+++ b/src/app/components/principal-admi/principal-admi.component.html
@@ -17,7 +17,7 @@
     <div id="flecha">
       <i class="fa-solid fa-angle-down"></i>
     </div>         
-    <div id="container-cards" class=" d-flex align-items-start justify-content-center" >
+    <div id="container-cards" class="d-flex align-items-start justify-content-center">
       <div class="col">
         <div class="card">
           <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
@@ -28,7 +28,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Empleados</h5>
-            <p class="card-text">Gestion de empleados</p>
+            <p class="card-text">Gestion de empleados.</p>
             <button class="btn" (click)="GestionEmpleados()">Ir</button>
           </div>
         </div>
@@ -43,7 +43,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Reuniones</h5>
-            <p class="card-text">Gestion de reuniones</p>
+            <p class="card-text">Gestion de reuniones.</p>
             <button class="btn" (click)="RegistroReuniones()">Ir</button>
           </div>
         </div>
