--- a/src/app/components/principal-participante/principal-participante.component.html
+++ b/src/app/components/principal-participante/principal-participante.component.html
@@ -1,79 +1,75 @@
 <div class="row container-fluid">
-    <div id="inicio">
-      <!-- Background image -->
-      <div  class="text-center">
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="text-white">
-            <h1 class="mb-3"><i class="fa-brands fa-guilded"></i> <br> Inicio Participante</h1>
-            <!-- Breadcrumb -->
-            <nav class="d-flex">
-              <h6 class="mb-0">
-                <a routerLink="/principal/Participante" class="text-reset">Home</a>
-                <span>/</span>
-              </h6>
-            </nav>
-            <!-- Breadcrumb -->
+  <div id="inicio">
+    <!-- Background image -->
+    <div  class="text-center">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white">
+          <h1 class="mb-3"><i class="fa-brands fa-guilded"></i> <br> Inicio Participante</h1>
+          <!-- Breadcrumb -->
+          <nav class="d-flex">
+            <h6 class="mb-0">
+              <a routerLink="/principal/Participante" class="text-reset">Home</a>
+              <span>/</span>
+            </h6>
+          </nav>
+          <!-- Breadcrumb -->
+        </div>
+      </div>                
+    </div>
+    <div id="flecha">
+      <i class="fa-solid fa-angle-down"></i>
+    </div>          
+    <div id="container-cards" class="d-flex align-items-start justify-content-center">
+      <div class="col">
+        <div class="card">
+          <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+            <img src="/assets/undraw_Events.png" class="img-fluid"/>
+            <a href="#!">
+              <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Agenda</h5>
+            <p class="card-text">Ver agenda por mes, semana o dia.</p>
+            <button class="btn"(click)="Agenda()">Ir</button>
           </div>
         </div>
-                           
       </div>
-      <div id="flecha">
-        <i class="fa-solid fa-angle-down"></i>
+      <div class="col">
+        <div class="card">
+          <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+            <img src="/assets/undraw_Online_calendar.png" class="img-fluid"/>
+            <a href="#!">
+              <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Audiencias</h5>
+            <p class="card-text">
+              Ver en detalle tus reuniones. <br>
+              Busqueda de reuniones.
+            </p>
+            <button class="btn" (click)="Audiencias()">Ir</button>
+          </div>
+        </div>
       </div>
-                        
-      <div id="container-cards" class=" d-flex" >
-        <div class="col">
-          <div class="card">
-            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-              <img src="/assets/undraw_Events.png" class="img-fluid"/>
-              <a href="#!">
-                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Agenda</h5>
-              <p class="card-text">Ver agenda por mes, semana o dia.</p>
-              <button class="btn"(click)="Agenda()">Ir</button>
-            </div>
+      <div class="col">
+        <div class="card">
+          <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+            <img src="/assets/undraw_Calendar.png" class="img-fluid"/>
+            <a href="#!">
+              <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+            </a>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-              <img src="/assets/undraw_Online_calendar.png" class="img-fluid"/>
-              <a href="#!">
-                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Audiencias</h5>
-              <p class="card-text">
-                Ver en detalle tus reuniones <br>
-                Busqueda de reuniones
-            </p>
-              <button class="btn" (click)="Audiencias()">Ir</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-              <img src="/assets/undraw_Calendar.png" class="img-fluid"/>
-              <a href="#!">
-                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Notificaciones</h5>
-              <p class="card-text">
-                Ver notifcaciones de reuniones proximas
-            </p>
-              <button class="btn" >Ir</button>
-            </div>
+          <div class="card-body">
+            <h5 class="card-title">Notificaciones</h5>
+            <p class="card-text">Ver notifcaciones de <br> reuniones proximas.</p>
+            <button class="btn" >Ir</button>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
               
   
