Funciona tabla reuniones y al crear una reunion te direcciona a detalle

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
                     -->
                 </div>
                 <div id="btns">
-                   <button class="btn btn-login btn-lg" value="LOGIN" (click)="login()" [disabled]="form.invalid">LOGIN</button>
+                   <button class="btn btn-login btn-lg"  (click)="login()" [disabled]="form.invalid">LOGIN</button>
                    <div class="alert-danger">{{msglogin}}</div>
                 </div>
             </form>
