--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,12 +6,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a  class="nav-link active" aria-current="page" type="button" [routerLink]="'principal'"> HOME</a>
           </li>
           <li class="nav-item">
             <a  class="nav-link" aria-current="page" type="button">Informacion</a>
-          </li>
+          </li> -->
         </ul> 
         <form class="d-flex">
           <div class="dropdown" *ngIf="loginService.userLoggedIn()">
